samples/_failures_safe/1761392656_773d2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aeb5ba0.c: In function ‘main’:
./samples/SAFE/__tmp_8aeb5ba0.c:191:9: error: expected expression at end of input
  191 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_8aeb5ba0.c:191:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8aeb5ba0.c:191:9: error: expected declaration or statement at end of input
